--- a/8_server-jre_unlimited/Dockerfile
+++ b/8_server-jre_unlimited/Dockerfile
@@ -6,3 +6,5 @@ RUN apk upgrade --update && \
     curl -so /tmp/wisvch.crt https://ch.tudelft.nl/certs/wisvch.crt && \
     keytool -noprompt -keystore /opt/jdk/jre/lib/security/cacerts -storepass changeit -importcert -alias wisvch -file /tmp/wisvch.crt && \
     apk del curl
+RUN apk upgrade --update && \
+    apk add --update bash
